Fixed styles when json editor is too tall

--- a/src/view/App.css
+++ b/src/view/App.css
@@ -6,7 +6,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
+    margin: 40px;
 }
 
 .app {
